# back_reachability_petrinets

./: README.md
bw_reachability/: CMakeLists.txt  README.md
bw_reachability/src/: CMakeLists.txt  cmake_install.cmake  memScript.sh  temp_output  temp_time
bw_reachability/src/benchmarkResults/medical/: medical_one.csv
bw_reachability/src/benchmarkResults/mist/iter_data/: mist_iter.csv
bw_reachability/src/benchmarkResults/mist/meta_data/: PNpremax.csv  boundedPNpremax.csv
bw_reachability/src/benchmarkResults/mist/meta_data_before/: PN.csv  PNpremax_sizebug.csv  PNwhilemax.csv  boundedPN-max.csv  boundedPNEffTest-max.csv
bw_reachability/src/benchmarkResults/soter/: meta_data_easy_premax.csv
bw_reachability/src/benchmarkResults/wahl-kroening/: meta_data_easy_premax.csv
bw_reachability/src/benchmarks/: huge.spec
bw_reachability/src/impl/: BackwardsReachability.cpp  PetriNet.h  TableOfNodes.cpp  TableOfNodes.h  Transducer.h
bw_reachability/src/impl/MISTparser/: testParser.cpp
bw_reachability/src/impl/before/: filePlayground.cpp  preprocess.cpp  transducerFromPN.cpp
bw_reachability/src/impl/benchmarking/: BackwardsReachabilityTesting.h  simpleBenchmarks.cpp
bw_reachability/src/impl/tests/: testBW.cpp  testPetriPre.cpp  testPre.cpp
bw_reachability/src/src/: cmake_install.cmake
bw_reachability/src/visualization/: afterPostprocessed.dot  basicResult.dot  bbb.dot  beforePostprocessed.dot  current.dot  inter.dot  iteration1.dot  petriPreResultCompact.dot  petriPreTrans.dot  ransducer.dot  resultMarkingCompact.dot  start.dot  table.dot  testSize.dot  transducer0.dot  transducer1.dot
bw_reachability/src/visualization/before/: PreprocessAfterUnion.dot  afterPreprocess.dot  marking1.dot  marking2.dot  pre.dot  preTransducer.dot  testSingle.dot  tfpn.dot  transducer.dot
sourcecode/: implementation.md
sourcecode/notesTex/: notes.fdb_latexmk  notes.fls  notes.tex
sourcecode/src/: CMakeCache.txt  Makefile  memScriptBash.sh  perf
sourcecode/src/benchmarks/: basic.spec  big.spec  language_format  pingpong.spec
sourcecode/src/impl/: BackwardsReachability.h  Transducer.cpp  petrimat.cpp
sourcecode/src/src/: Makefile
sourcecode/src/visualization/: afterPreprocessed.dot  all_simple.dot  basicWholeTable.dot  beforePreprocessed.dot  iteration0.dot  (+8 more)
(+41 files in other folders)
